recordの基本的なviewを作成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,14 @@
     <string name="app_ver">ver 1.0.0</string>
 
 <!--    RecordMood-->
-    <string name="question_text">今の気持ちは？</string>
+    <string name="record_mood_activity_title">Record</string>
     <string name="menu_calendar_button_text">カレンダー</string>
     <string name="menu_graph_button_text">グラフ</string>
-
+    <string name="happy_button_text">happy</string>
+    <string name="anger_button_text">angry</string>
+    <string name="fun_button_text">fun</string>
+    <string name="sad_button_text">sad</string>
+    <string name="memo_title">memo</string>
+    <string name="time_zone_title">time zone</string>
+    <string name="save_button_text">save</string>
 </resources>
