ローカルDB追加とUI少し修正

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="save_button_text">save</string>
     <string name="success_save_dialog_title">成功</string>
     <string name="success_save_dialog_msg">保存に成功しました。</string>
-    <string name="empty_mood_dialog_title">dateが未選択です</string>
-    <string name="empty_mood_dialog_msg">日付を選択してください。</string>
+    <string name="null_date_dialog_title">dateが未選択です</string>
+    <string name="null_date_dialog_msg">日付を選択してください。</string>
     <string name="null_mood_dialog_title">感情が未選択です</string>
     <string name="null_mood_dialog_msg">一番気持ちが近いボタンをタップしてください。</string>
     <string name="null_time_zone_dialog_title">time zoneが未入力です</string>
