リサイクラービューはできた。あとは細かい修正だけ。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
 <!--    RecordMood-->
     <string name="record_mood_activity_title">Record</string>
-    <string name="menu_calendar_button_text">カレンダー</string>
+    <string name="menu_list_button_text">一覧</string>
     <string name="menu_graph_button_text">グラフ</string>
     <string name="happy_button_text">happy</string>
     <string name="anger_button_text">angry</string>
@@ -28,5 +28,7 @@
     <string name="null_time_zone_dialog_msg">時間帯を選択してください。</string>
     <string name="failure_save_dialog_title">失敗</string>
     <string name="failure_save_dialog_msg">保存に失敗しました。</string>
+    <string name="not_data_dialog_title">表示できません</string>
+    <string name="not_data_dialog_msg">データが存在しません。</string>
 
 </resources>
