--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,9 @@
 
 <!--    RecordMood-->
     <string name="record_mood_activity_title">Record</string>
-    <string name="menu_list_button_text">一覧</string>
-    <string name="menu_graph_button_text">グラフ</string>
+    <string name="menu_list_button_text">List</string>
+    <string name="menu_graph_button_text">Graph</string>
+    <string name="menu_back_button_text">Back</string>
     <string name="happy_button_text">happy</string>
     <string name="anger_button_text">angry</string>
     <string name="fun_button_text">fun</string>
